2003-01-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* OgreApp.cpp/h: added basic GUI elements.
	Now OgreApp inherits from ogre::ActionListener 
	and ogre::MouseListener

2002-12-16 M Pollard <circlemaster@blueyonder.co.uk>
	* EventGenerator.cpp/h: Forgot to null out myFocusedWidget oops!

2002-12-16 M Pollard <circlemaster@blueyonder.co.uk>
	* Converted SigC::Object to virtual SigC::Object.

2002-12-15 M Pollard <circlemaster@blueyonder.co.uk>
	* ImageService.cpp/h: Quick tidy up.

2002-12-13 M Pollard <circlemaster@blueyonder.co.uk>
	* EntityListener.cpp/h: Rename of gameview creation of new pure virtual
	  base class.  Reviews welcome!

	* TemplateEntityListener.cpp/h templategameview.cpp/h: rename and
	  modify of GameView template.

2002-12-10 M Pollard <circlemaster@blueyonder.co.uk>
	* templategameview.cpp/h: Updated this.

	* DimeServices.cpp/h ConfigService.cpp/h: standardised the instancing
	  mechanism.

	* LoggingService.cpp/h ConfigService.cpp/h: made sure Service() was
	  instanced.

2002-12-10 Miguel Guzman (Aglanor) <aglanor@telefonica.net>

	* terrain.cfg, moraf.png: added moraf map, quick & dirty version.
	Now you can wander in 3d over the lands of Moraf.


2002-12-10 Miguel Guzman (Aglanor) <aglanor@telefonica.net>

	* OgreApp.cpp: meshes are placed into the OGRE scene when an entity is created.
	Currently they're all squirrels of doom.

	* OgreApp.cpp/h: removed "using namespace ogre". OGRE should not be
	more relevant here than dime or eris. Now it uses the default namesp.


2002-12-07 M Pollard <circlemaster@blueyonder.co.uk>
	* ConfigService.cpp: Initialise static member theInstance to NULL.

	* Application.cpp: Fixed it so that myStateManager is inited to NULL.

	* InputDevice.cpp: Fixed a delete to a delete[].  Fix loads of memory
	  leaks.

	* ColorRenderer.cpp/h BorderRenderer.cpp/h: made some stuff const.

2002-12-07 M Pollard <circlemaster@blueyonder.co.uk>
	* NEWS: update

	* RendererFactory.cpp: Added TILE support.
