@@ -1,19 +1,21 @@
 Controls for dime - OGRE
 This is a temporary file, when dime is more advanced the controls will be defined via the configuration service.
 
-MOUSE: look around
+MOUSE: look around when not in game GUI mode
+		point & click when in game GUI mode
 
 W: walk forward
 S: walk backwards
 A: sidestep left
 D: sidestep right
 
-O: camera
-P: camera
-I: camera
-K: camera
+O: camera yaw
+P: camera yaw
+I: camera pitch
+K: camera pitch
 
-F: toggle GUI on / off
+F: toggle debug GUI on / off
 Y: toggle wireframe mode
+H: toggle game GUI on / off
 
 ESC: quit game
