@@ -1,6 +1,11 @@
+2003-01-06 Miguel Guzman <aglanor [at] telefonica [dot] net>
+	* OgreApp.cpp/h: dual mode for the GUI: press 'H' to display 
+	the GUI and use the mouse to click on it.
+	Press 'H' again to hide it and return to fullscreen mouseview.
+
 2003-01-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
 	* OgreApp.cpp/h: added basic GUI elements.
-	Now OgreApp inherits from ogre::ActionListener 
+	Now OgreApp inherits from ogre::ActionListener
 	and ogre::MouseListener
 
 2002-12-16 M Pollard <circlemaster@blueyonder.co.uk>
